--- a/client/error.html
+++ b/client/error.html
@@ -47,7 +47,7 @@
 
     <header class="header">
 
-        <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
+        <a href="/" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
 
         <nav class="navbar">
             <a href="/">home</a>
