--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
 
-        <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
+        <a href="/" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
 
         <nav class="navbar">
             <a href="/">home</a>
@@ -44,32 +44,33 @@
         </div>
 
     </section>
-
+    <h3 class="heading"> <span>India's Health Statistics</span></h3>
     <section class="icons-container">
 
         <div class="icons">
             <i class="fas fa-user-md"></i>
-            <h3>140+</h3>
+            <h3>1.2 million +</h3>
             <p>doctors at work</p>
         </div>
 
         <div class="icons">
-            <i class="fas fa-users"></i>
-            <h3>1040+</h3>
-            <p>satisfied patients</p>
-        </div>
-
-        <div class="icons">
             <i class="fas fa-procedures"></i>
-            <h3>500+</h3>
-            <p>bed facility</p>
+            <h3>695,000</h3>
+            <p>beds</p>
         </div>
 
         <div class="icons">
             <i class="fas fa-hospital"></i>
-            <h3>80+</h3>
+            <h3>29899</h3>
             <p>available hospitals</p>
         </div>
+
+        <div class="icons">
+            <i class="fas fa-dollar-sign"></i>
+            <h3>$10.375 bn+</h3>
+            <p>Health Budget</p>
+        </div>
+
 
     </section>
 
@@ -144,6 +145,25 @@
 
                         </ul>
                     </div>
+                    <div class="group"><img src="/static/laptop.jpg" class="image1">
+                        <h4>Digital Health Archive</h4>
+                        <ul>
+
+                            <li>It might be tedious and troublesome task for you to maintain proper records of your
+                                ongoing treatments/medications as well as your medical test reports.
+                            </li>
+                            <li>Now,you don't need to worry about that,since at Medidoor under Medical History section
+                                all your medical records will be available for your ready reference at a single click
+                            </li>
+                            <li>Using these records,the patient can approach any doctor of their choice and they won't
+                                have to struggle in explaining them their previous medical conditions or searching for
+                                their old test reports,as they can easily see that through Medidoor</li>
+                            <li>Also receive reminders and notifications for your health checkups/tests at regular
+                                intervals of time thus aiding in early detection and timely treatment of disease</li>
+
+                        </ul>
+                    </div>
+
 
                 </div>
             </div>
