--- a/client/login.html
+++ b/client/login.html
@@ -21,7 +21,7 @@
 
     <header class="header">
 
-        <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
+        <a href="/" class="logo"> <i class="fas fa-heartbeat"></i> MediDoor </a>
 
         <nav class="navbar">
             <a href="/">home</a>
