--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,8 @@
             <h3>Medical Care, Redefined.</h3>
             <p>Taking advanced healthcare to your doorstep!</p>
             <a href="/login" class="btn"> login now! <span class="fas fa-chevron-right"></span> </a>
+            <p style="color: black;">Facing an emergency? Get in touch with your nearest MHV at <strong>123-###</strong>
+            </p>
         </div>
 
     </section>
