--- a/client/index.html
+++ b/client/index.html
@@ -110,7 +110,7 @@
                         </ul>
                     </div>
                     <div class="group"><img src="/static/treatment.png" class="image1">
-                        <h4>Regular Health Checkups/Tests/Treatments</h4>
+                        <h4>Regular Health Checkups/Treatments</h4>
                         <ul>
 
                             <li>We will also be providing the facility of regular health checkups,health tests or some
