--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,7 @@
                     especially in remote areas by taking the advanced healthcare services to the doorstep of the
                     people.
                 </p>
-                <p> Some of our services are:</p>
+                <h1 class="heading" style="font-size:4rem;"> <span>about</span> us </h1>
                 <div class="flexdown">
                     <div class="group"><img src="/static/mhv.png" class="image1">
                         <h4>Mobility Health Vans(MHVs)</h4>
