--- a/client/user.html
+++ b/client/user.html
@@ -136,7 +136,7 @@
 
     <section class="home" id="home">
         <h3 class="heading"> <span>Prominent Diseases for other Counties</span></h3>
-        <iframe src="{{ url_for('static', path = '/final.html') }}" height="1000px" width="100%" seamless></iframe>
+        <iframe src="http://20.53.229.136:5390/static/final.html" height="1000px" width="100%" seamless></iframe>
 
     </section>
 
